--- a/charts/flask-app-chart/Chart.yaml
+++ b/charts/flask-app-chart/Chart.yaml
@@ -1,4 +1,4 @@
-apiVersion: v2/Users/lorenzocafarelli/Desktop/Git/formazione_sou_k8s/charts/flask-app-chart/Chart.yaml
+apiVersion: v2/Users/gianmarco.dauria/Desktop/Git/test_pipe_step4/charts/flask-app-chart/Chart.yaml
 name: flask-app-chart
 description: A Helm chart for Kubernetes
 
